For changes before version 0.3.1, see 
  http://algoviz.org/algoviz-wiki/index.php/JSAV_Roadmap

Changes in development version
------------------------------
* new minor features:
  - tree nodes now have a remove() function to remove that node
  - tree node show/hide now work recursively and hide the whole subtree

Changes in version 0.5
----------------------
* new features:
   - support for linked list data structure
* numerous small bug fixes
* new minor features:
   - functions to access edges in a tree more easily
   - possibility to call JSAV animation functions without recording the change
   - support for gettings bounds() of a data structure
   - support for 2-step layout; 1) calculating bounds without layout change, 2) update layout

Changes in version 0.4.3
------------------------
* new features:
   - absolute positioning of labels, variables and data structures is now possible
   - labels can be attached to edges
* bug fixes:
   - issue with changing array value in horizontal layout in Webkit based browsers fixed
   - show/hide bug for data structures fixed
* new minor features:
   - allow custom event binding for data structures
   - allow data to be passed to event handlers for data structures
   - added function JSAV.utils.rand.sample to get a random sample from an array

Changes in version 0.4.2
------------------------
* Possibility to better control array styling
* Fixed a bug in tree positioning
* Added function isAnimating() to check whether an animation is playing
* Restructured data structure implementations into modules:
   - array moved to array.js
   - layouts moved to same module as DS implementation
* Added easier way to attach event handlers to the data structures
* Fixed a bug in array and tree value handling

Changes in version 0.4
----------------------
* Support for tree and binary tree
* Support for vertical array layout
* Removed the initial support for binary search tree
* Documentation for graphical primitives