@@ -3,6 +3,8 @@ For changes before version 0.3.1, see
 
 Changes in development version
 ------------------------------
+* new features:
+  - support for pseudocode view
 * new minor features:
   - tree nodes now have a remove() function to remove that node
   - tree node show/hide now work recursively and hide the whole subtree
